# LinkedNN

./: README.md  pyproject.toml
linkedNN/: check_args.py  models.py
